infrastructure/networking/shopping-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopping-portal-ingress
  namespace: shopping
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: shopping-portal-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
    alb.ingress.kubernetes.io/success-codes: "200-399"

    alb.ingress.kubernetes.io/tags: Environment=dev,Project=shopping-portal

spec:
  ingressClassName: alb

  rules:
    - host: product.shopping.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: product
                port:
                  number: 9091

    - host: users.shopping.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: userservice
                port:
                  number: 9092
